--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
+.App {
+  margin: 0 auto;
+  min-width: 800px;
+  max-width: 1200px;
+}
