--- a/client/src/casePokemon.css
+++ b/client/src/casePokemon.css
@@ -1,16 +1,17 @@
 
 
 .pokemon_card {
-    padding-top: 5px;
     color: white;
     float: left;
     background-color: #686868;
     border-radius: 15px;
     margin: 10px 10px;
-    width: auto;
+    width: 15%;
+    padding: 0;
 }
 
 img {
     max-width: 80%;
     height: auto;
+    margin: 0;
 }
