--- a/client/src/casePokemon.css
+++ b/client/src/casePokemon.css
@@ -1,17 +1,16 @@
 
-
 .pokemon_card {
     color: white;
     float: left;
     background-color: #686868;
-    border-radius: 15px;
+    border-radius: 5px;
     margin: 10px 10px;
-    width: 15%;
-    padding: 0;
+    padding: 100;
+    display : -moz-deck;
 }
 
-img {
-    max-width: 80%;
-    height: auto;
-    margin: 0;
+body{
+    background-color:#273746;
+    margin-left:25vh;
+    margin-right:25vh;
 }
